[package]
name = "chatgpt-tgbot-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.8", features = ["full"] }


teloxide = "0.12.2" # Make sure to use the latest version available
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.4"